--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,45 +2,54 @@ name: Tests
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main ]
+  workflow_dispatch:
+  schedule:
+    # Run tests daily at 2am UTC to catch dependency issues
+    - cron: '0 2 * * *'
 
 jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
+      fail-fast: false
 
     steps:
     - uses: actions/checkout@v4
-
+    
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-
+        cache: 'pip'
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e .
         pip install -r requirements.txt
-
-    - name: Run all tests
+        pip install pytest pytest-cov pytest-mock responses coverage
+    
+    - name: Run all tests with coverage
       env:
         HIBP_API_KEY: ${{ secrets.HIBP_API_KEY }}
       run: |
-        # Run all tests - integration tests will be skipped if no API key
-        pytest tests/ -v --cov=haveibeenpwned --cov-report=term --cov-report=xml
-        
+        if [ -n "$HIBP_API_KEY" ]; then
+          echo "Running all tests including live API tests..."
+          pytest tests/ -v --cov=hibp --cov-report=term-missing --cov-report=xml --cov-report=html
+        else
+          echo "Secrets not configured, running mock tests only..."
+          pytest tests/ -v --cov=hibp --cov-report=term-missing --cov-report=xml --cov-report=html
+        fi
+    
     - name: Check coverage threshold
-      if: matrix.python-version == '3.12'
       run: |
-        coverage report --fail-under=95
-
-    - name: Upload coverage to Codecov
+        coverage report --fail-under=90
+    
+    - name: Upload coverage reports
       if: matrix.python-version == '3.12'
       uses: codecov/codecov-action@v4
       with:
@@ -48,3 +57,39 @@ jobs:
         flags: unittests
         name: codecov-umbrella
         fail_ci_if_error: false
+      continue-on-error: true
+    
+    - name: Upload coverage HTML
+      if: matrix.python-version == '3.12' && always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: coverage-report
+        path: htmlcov/
+        retention-days: 30
+
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: '3.12'
+        cache: 'pip'
+    
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install ruff mypy
+        pip install -r requirements.txt
+    
+    - name: Lint with ruff
+      run: |
+        ruff check hibp/ --output-format=github
+      continue-on-error: true
+    
+    - name: Type check with mypy
+      run: |
+        mypy hibp/ --ignore-missing-imports
+      continue-on-error: true
