--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include README.md
 include LICENSE
 include requirements.txt
-recursive-include haveibeenpwned *.py
+recursive-include hibp *.py
 recursive-include examples *.py
