--- a/pytest.ini
+++ b/pytest.ini
@@ -7,7 +7,7 @@ addopts =
     -v
     --strict-markers
     --tb=short
-    --cov=haveibeenpwned
+    --cov=hibp
     --cov-report=term-missing
 
 markers =
