--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -97,6 +97,7 @@ jobs:
       uses: trufflesecurity/trufflehog@main
       with:
         path: ./
-        base: ${{ github.event.repository.default_branch }}
+        base: ${{ github.event.pull_request.base.sha || 'HEAD~1' }}
         head: HEAD
-        extra_args: --debug --only-verified
+        extra_args: --only-verified
+      continue-on-error: true
